docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__AttainmentPlanRow__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attainment Plan Account Rows</relationshipLabel>
        <relationshipName>AttainmentPlanAccountRows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__AttainmentPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attainment Plan</label>
        <referenceTo>sfsp__AttainmentPlan__c</referenceTo>
        <relationshipLabel>Attainment Plan Rows</relationshipLabel>
        <relationshipName>AttainmentPlanRows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__IsPriority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfsp__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Attainment Plan Row</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attainment Plan Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>